# ASPEXA_AUTOMA

./: .gitignore  AUTH_DEBUG.md  CLAUDE.md  FUNCTIONAL_EXAMPLE_FIXED.md  ORCHESTRATOR_TESTS.md  PHASE34_FIXES_SUMMARY.md  PITCH_SCRIPT_CONCISE.md  README.md  REAL_EXECUTION_SUMMARY.md  TESTING_SUMMARY.md  TEST_RESULTS.md  coverage.xml  pyproject.toml  pytest.ini  start.ps1  update_exploit.py  update_exploit_viewer.py
.claude/: settings.local.json
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/tracks/doc_update_20251227/: metadata.json  plan.md  spec.md
docs/: ADAPTIVE_ATTACK_MEMORY_PROPOSAL.md  ATTACK_FINDINGS_REPORT.md  INTELLIGENT_ADAPTIVE_ATTACK_PLAN.md  INTELLIGENT_ATTACK_SYSTEM_PLAN.md  PAYLOAD_SOURCES_RESEARCH_PLAN.md  PERSISTENCE.md  PERSISTENCE_GUIDE.md  PHASE3_PHASE4_CLEANUP.md  PHASE3_PHASE4_COMPLETION.md  PHASE3_PHASE4_GRAPH_VERIFICATION.md  PYRIT_ANALYSIS.md  PYRIT_MIGRATION_PLAN.md  RESEARCH_BRIEF_MEMORY_MULTILINGUAL.md  TAGGED_PROMPT_STRUCTURE_TESTS_SUMMARY.md  api_architecture.md  bypass_knowledge_vdb_plan.md  code_base_structure.md  data_contracts.md  db_schema.md  faststream_topics.md  main.md  onboarding.md  persistence_integration_plan.md  swarm_frontend_alignment_plan.md  tech_stack.md  unused_routes_cleanup_plan.md
docs/Authentication/: auth_flow.md
docs/Phases/: PHASE1_CARTOGRAPHER.md  PHASE2_SWARM_SCANNER.md  PHASE3_GARAK_INTEGRATION.md  PHASE4_SNIPERS_EXPLOIT.md
docs/bypass_knowledge_vdb/: OVERVIEW.md  PHASE_1_MODELS.md  PHASE_2_INFRASTRUCTURE.md  PHASE_3_EMBEDDINGS.md  PHASE_4_STORAGE.md  PHASE_5_CAPTURE.md  PHASE_6_QUERY.md  PHASE_7_INTEGRATION.md  PROGRESS.md
docs/manual_sniping/: 00_INDEX.md  01_ARCHITECTURE.md  02_API_SPECIFICATIONS.md  03_FRONTEND_DESIGN.md  04_IMPLEMENTATION_CHECKLIST.md  05_KNOWN_ISSUES.md
docs/persistance/: s3_plan.md
docs/phasebasedpyrit/: 00_OVERVIEW.md  01_FOUNDATION.md  02_SCORERS.md  03_ORCHESTRATORS.md  04_FLOW_REWRITES.md  05_TESTING.md
docs/research/: dual_track_payload_patterns.md
docs/sniper_enhancements/: 00_OVERVIEW.md  01_INTELLIGENT_ATTACK_AGENT.md  02_CONVERTER_EXPANSION.md  03_PROMPT_ARTICULATION.md  04_CHAIN_DISCOVERY.md  05_DATA_LEAK_DETECTION.md  PHASE1_IMPLEMENTATION_PROGRESS.md  PHASE2_IMPLEMENTATION_PROGRESS.md  PHASE3_PHASE4_IMPLEMENTATION.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PHASE_1_RECON_FRAMING.md  PHASE_2_ADVERSARIAL_SUFFIX.md  PHASE_3_CONVERTER_OPTIMIZATION.md  PHASE_4_INTEGRATION.md  README.md  TEST_SCENARIOS.md  gradient.md
documents/: 2025-12-09_clerk_authorization_friends_access.md  CHAIN_DISCOVERY_INTEGRATION.md  index.md
exploit_results/: exploit_report_20251125_104625.json  exploit_report_20251125_105219.json  exploit_report_20251125_114510.json  exploit_report_20251125_115054.json
infra/bypass_knowledge/: Pulumi.dev.yaml  Pulumi.yaml  __init__.py  __main__.py  vector_infrastructure.py
libs/config/: __init__.py  settings.py
libs/connectivity/: __init__.py  config.py  contracts.py  response.py
libs/connectivity/adapters/: __init__.py  chat_http_target.py  garak_generator.py  gemini_chat_target.py  pyrit_targets.py  websocket_generator.py
libs/connectivity/http/: __init__.py  async_client.py  sync_client.py
libs/contracts/: __init__.py  attack.py  common.py  recon.py  scanning.py
libs/database/: session.py
libs/database/models/: campaigns.py  findings.py  operations.py
libs/events/: consumer.py  publisher.py
libs/monitoring/: .env.example  README.md  __init__.py  utils.py
libs/persistence/: __init__.py  bucket_manager.py  contracts.py  s3.py  scan_models.py
libs/persistence/pulumi/: Pulumi.yaml  __main__.py  sync_env.py
libs/persistence/sqlite/: __init__.py  cleanup.py  connection.py  models.py  repository.py
scripts/: TEST_SWARM_DOCUMENTATION.md  analyze_garak_scan.py  demo_pyrit_integration.py  demo_snipers.py  exploit_agent_attack.py  simple_scan.py  test_swarm_scanner.py
scripts/examples/: 01_basic_reconnaissance.py  02_persistence_workflow.py  03_intelligence_extraction.py  scan_target_with_swarm.py
scripts/testing/: README_SWARM.md  test_cartographer_service.py
services/api_gateway/: README.md  main.py
services/api_gateway/auth/: __init__.py  clerk_auth.py  permissions.py
services/api_gateway/routers/: __init__.py  campaigns.py  exploit.py  manual_sniping.py  recon.py  scan.py  scans.py
services/api_gateway/schemas/: __init__.py  campaigns.py  exploit.py  manual_sniping.py  recon.py  scan.py  snipers.py
services/api_gateway/utils/: __init__.py  serialization.py
services/cartographer/: README.md  __init__.py  consumer.py  entrypoint.py  main.py  prompts.py  response_format.py
services/cartographer/agent/: __init__.py  graph.py  prompts.py  state.py
services/manual_sniping/: __init__.py  entrypoint.py
services/snipers/: ARCHITECTURE.md  README.md  REFACTOR.md  TAGGED_PROMPT_STRUCTURE_PLAN.md  adaptive_loop.py  config.py  consumer.py  context_passing.md  entrypoint.py  models.py  parsers.py
services/swarm/: README.md  SURGICAL_PROBING_ENHANCEMENTS.md  __init__.py  diagrams.md  entrypoint.py  main.py
test_target_agent/: FIX_422_ERROR.md  README.md  main.py  mock_tools.py  pyproject.toml  system_prompt.py  update_tools.py
tests/: conftest.py  junit.xml  report.html
tests/bypass_knowledge/: __init__.py  test_embeddings.py  test_episode_capturer.py  test_episode_store.py  test_integration.py  test_models.py
tests/routers_api_gateway/: __init__.py  test_snipers_routers.py
(+576 files in other folders)
