[project]
name = "aspexa-automa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faststream>=0.6.3",
    "garak>=0.5.0",
    "pydantic>=2.12.4",
    "sqlalchemy>=2.0.44",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "langchain-google-genai>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "langchain==1.0.8",
    "langchain-core==1.1.0",
    "langgraph>=1.0.1",
    "langgraph-prebuilt==1.0.5"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "aioresponses>=0.7.6",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["libs*", "services*", "infrastructure*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
