[project]
name = "aspexa-automa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faststream>=0.6.3",
    "garak>=0.5.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.44",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "langchain-google-genai>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "langchain==1.0.8",
    "langchain-core==1.1.0",
    "langgraph>=1.0.1",
    "langgraph-prebuilt==1.0.5",
    "websockets>=15.0.1",
    "pyrit>=0.9.0",
    "pytest>=9.0.1",
    "boto3>=1.35.0",
    "pulumi-aws>=7.12.0",
    "langfuse>=3.10.1",
    "deepagents>=0.2.8",
    "pulumi-aws-native>=1.38.0",
    "clerk-backend-api>=4.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "aioresponses>=0.7.6",
]
infra = [
    "pulumi>=3.0.0",
    "pulumi-aws>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["libs*", "services*", "infrastructure*"]

[tool.pytest.ini_options]
# Test discovery patterns
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Test output and reporting
addopts = [
    "-v",                               # Verbose output with test names
    "-l",                               # Show local variables in tracebacks
    "--tb=short",                       # Detailed failure messages
    "--durations=10",                   # Show slowest tests
    "--cov=services",                   # Coverage reporting
    "--cov=libs",
    "--cov-report=term-missing",
    "--cov-report=html:tests/coverage_html",
    "--cov-report=xml",
    "--cov-branch",
    "--junit-xml=tests/junit.xml",      # JUnit XML for CI/CD
    "--html=tests/report.html",         # HTML report
    "--self-contained-html",
    "-ra",                              # Clear output
]

# Logging configuration
log_cli = true
log_cli_level = "INFO"
log_file = "tests/test_results.log"
log_file_level = "DEBUG"
log_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

# Timeout for tests (in seconds)
timeout = 300

# Markers for test categorization
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Tests that take a long time to run",
    "edge_case: Edge case tests",
    "config_error: Configuration error tests",
    "pyrit: PyRIT integration tests",
    "models: Pydantic model validation tests",
    "parsers: Parser functionality tests",
    "routing: Routing logic tests",
]

# Minimum Python version
minversion = "3.9"

# Test collection ignore patterns
norecursedirs = [".git", ".tox", "dist", "build", "*.egg", "__pycache__", ".venv"]

# Doctest configuration
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"

# Asyncio mode
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["services", "libs"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
precision = 2
skip_empty = true

[tool.coverage.html]
directory = "tests/coverage_html"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
