# Test Target Agent - Dependencies

[project]
name = "test-target-agent"
version = "1.0.0"
description = "Customer service agent for testing Cartographer reconnaissance"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.12.4",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "python-dotenv>=1.0.0",
    "nest>=0.4.4",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",  # For testing
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "mock_tools", "system_prompt"]
